Fix avatar height on iOS

--- a/docs/.vuepress/theme/styles/landing.scss
+++ b/docs/.vuepress/theme/styles/landing.scss
@@ -1243,8 +1243,9 @@
     display: flex;
     
     img {
-      width: 19%;
+      width: 5em;
       min-height: auto;
+      height: auto;
       border: 2px solid #fff;
       border-radius: 400px;
       margin: auto;
